# OpenManus_SlidesMode_PV

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CLAUDE_Ru.md  COMPARISON_ANALYSIS.md  MODERNIZATION_REPORT.md  PROJECT_DOCUMENTATION.md  PROJECT_STRUCTURE.md  QUALITY_COMPARISON.md  README.md  TDD_SETUP_REPORT.md  TESTING_REPORT.md  create_presentation_demo.py  create_presentation_standalone.py  demo_comparison.py  demo_google_history.html  demo_google_history.json  final_enhanced_system.py  main_presentation.py  modernization_report.txt  project_testing_todo.md  pyproject.toml  qwen_vpn_generator.py  qwen_vpn_generator_fixed.py  qwen_vpn_presentation.html  qwen_vpn_presentation.json  qwen_vpn_presentation_fixed.html  qwen_vpn_presentation_fixed.json  requirements-test.txt  requirements.txt  run_di_demo.py  simple_di_demo.py  simple_test.py  test_content_tool.py  test_export_tool.py  test_image_tool.py  test_presentation.py  (+10 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  presentation-tests.yml
Examples_Slides/: Зеленая энергетика и экологические
app/: config.py  container.py  schema.py
app/adapters/: __init__.py  config.py  llm.py  logger.py  sandbox.py
app/agent/: base.py  enhanced_presentation_system.py  presentation_agent.py
app/core/: __init__.py  base_executor.py  base_middleware.py  config_manager.py  event_bus.py  tool_registry.py
app/executor/: __init__.py  presentation_executor.py
app/factories/: __init__.py  agent.py  flow.py
app/interfaces/: __init__.py  config.py  llm.py  logger.py  sandbox.py
app/middleware/: __init__.py  core_middleware.py
app/registry/: __init__.py
app/tool/: base.py  browser_use_tool.py  mcp.py  presentation_tools.py  unsplash_integration.py
app/tool/search/: baidu_search.py
config/: config.example.toml
demo/: gpt5_presentation_demo.py
docs/: dependency_injection.md
examples/: dependency_injection_usage.py
tests/: __init__.py  conftest.py  test_di_integration.py  test_openai_mocks.py  test_performance.py
tests/fixtures/: openai_fixtures.py
tests/mocks/: README.md  __init__.py  openai_mock.py  responses.py
tests/sandbox/: test_client.py  test_docker_terminal.py  test_sandbox.py  test_sandbox_manager.py
tests/unit/: __init__.py  test_agent_base.py  test_agent_factory.py  test_llm.py  test_presentation_agent_import.py  test_react_agent.py  test_tool_base.py  test_toolcall_agent.py
